--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <input type="text" id="input-field" placeholder="Bread">
-    <button id="add-btn">Add to cart</button>
-    <script src="index.js"></script>
+    <div class="container">
+        <img src="assets/cat.png" alt="Cat in shopping cart">
+        <input type="text" id="input-field" placeholder="Bread">
+        <button id="add-btn">Add to cart</button>
+        <script src="index.js"></script>
+    </div>
 </body>
 </html>
