Changed js type to module imported initializeApp

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <img src="assets/cat.png" alt="Cat in shopping cart">
         <input type="text" id="input-field" placeholder="Bread">
         <button id="add-btn">Add to cart</button>
-        <script src="index.js"></script>
+        <script src="index.js" type="module"></script>
     </div>
 </body>
 </html>
