--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
             <img src="assets/cat.png" alt="Cat in shopping cart">
             <input type="text" id="input-field" placeholder="Bread">
             <button id="add-btn">Add to cart</button>
-            <ul id="shopping-list">
-                <li>Oranges</li>
-                <li>Hot dogs</li>
-            </ul>
+            <ul id="shopping-list"></ul>
         </div>
         <script src="index.js" type="module"></script>
     </body>
