Changed placeholder and added hover effects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container">
             <img src="assets/cat.png" alt="Cat in shopping cart">
-            <input type="text" id="input-field" placeholder="Bread">
+            <input type="text" id="input-field" placeholder="Food!">
             <button id="add-btn">Add to cart</button>
             <ul id="shopping-list"></ul>
         </div>
