Changed styling for FINAL COMMIT

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="container">
-            <img src="assets/cat.png" alt="Cat in shopping cart">
+            <img src="assets/panda1.png" alt="Panda eating ramen">
             <input type="text" id="input-field" placeholder="Food!">
             <button id="add-btn">Add to cart</button>
             <ul id="shopping-list"></ul>
